# krecviz

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  test.yml
krecviz/: __init__.py  investigate.py  nalgebra_logs.txt  original_code_logs.txt  requirements-dev.txt  requirements.txt  urdf_logger.py  visualize.py
krecviz/data/krec_examples/: actuator_11_left_arm_shoulder_pitch_movement.krec  actuator_13_left_arm_shoulder_yaw_movement.krec  actuator_24_right_arm_elbow_pitch_movement.krec  actuator_25_right_arm_elbow_roll_movement.krec  actuator_41_right_leg_hip_pitch_sinewave.krec
krecviz_rust/: .gitignore  Cargo.toml
krecviz_rust/examples/: debug_test_transform.rs
krecviz_rust/src/: debug_log_utils.rs  geometry_utils.rs  krec_logger.rs  lib.rs  main.rs  main_global_trasnform.rs  repl_utils.rs  spatial_transform_utils.rs  urdf_bfs_utils.rs  urdf_logger.rs
krecviz_rust/src/utils/: debug_log_utils.rs  geometry_utils.rs  mod.rs  repl_utils.rs  spatial_transform_utils.rs  urdf_bfs_utils.rs
krecviz_rust/tests/: test_visualize.rs
src/: krec_logger.rs  lib.rs  main.rs
src/utils/: geometry_utils.rs  mod.rs  repl_utils.rs  spatial_transform_utils.rs  urdf_bfs_utils.rs
tests/: test_bfs_utils.rs  test_geometry_utils.rs  test_manual_urdf.py  test_spatial_transform_utils.rs  test_visualize.py  test_visualize.rs
tests/assets/: fully_correct.csv  simple_example_correct.csv  simple_example_correct.rrd
tests/assets/krec_examples/: actuator_12_left_arm_shoulder_roll_movement.krec  actuator_14_left_arm_elbow_pitch_movement.krec  (+9 more)
(+53 files in other folders)
