# Cargo.toml
[package]
name = "krecviz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
anyhow = "1.0"
rerun = { version = "0.21.0", features = ["run"] }
urdf-rs = "0.9.0"
stl_io = "0.8.3"
parry3d = "0.17.4"
nalgebra = "0.33.2"
image = "0.25.5"
krec = "0.3.0"
log = "0.4.22"
env_logger = "0.11.6"
tempfile = "3.14.0"

[lib]
name = "krecviz"
path = "src/lib.rs"

[[bin]]
name = "krecviz"
path = "src/main.rs"
